fixing alignment of text/titles on projects 1 and 2

--- a/portfolio_pageStyle.css
+++ b/portfolio_pageStyle.css
@@ -168,7 +168,11 @@ aside {
 }
 
 .Project1 {
-    width: 32vw;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 32vw;
     height: 40vh;
 	flex: 1 1;
 	margin: 10px;
@@ -196,17 +200,16 @@ aside {
 	display: inline-block;
 	width: 100%;
 	font-size: 1.4em;
-	position: absolute;
 	text-align: center;
-    margin: auto;
 	top: 25%;
 	z-index: 2;
 }
 
 .P1text {
 	display: none;
-    width: inherit;
 	text-align: center;
+	font-size: 1.4em;
+	margin-top: 20%;
 }
 
 .Small {
@@ -218,16 +221,19 @@ aside {
 
 .Project1:hover .Small {
 	display: inline-block;
-	width: inherit;
+	width: 75%;
+	margin-bottom: 25%;
 	color: #444444;
 	text-align: center;
-	position: absolute;
-	margin: auto;
-	top: 50%;
+	z-index: 2;
 }
 
 .Project2 {
-    width: 32vw;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 32vw;
     height: 40vh;
 	flex: 1 1;
 	margin: 10px;
@@ -254,9 +260,8 @@ aside {
 .Project2:hover .P2text {
 	display: inline-block;
 	width: 100%;
-	position: absolute;
 	text-align: center;
-	top: 25%;
+	align-self: center;
 	z-index: 2;
 }
 
@@ -264,17 +269,16 @@ aside {
 	display: none;
 	text-align: center;
 	font-size: 1.4em;
+	margin-top: 20%;
 }
 
 .Project2:hover .Small {
 	display: inline-block;
-	width: 60%;
+	width: 75%;
+	margin-bottom: 25%;
 	color: #444444;
 	text-align: center;
-	position: absolute;
-	margin: auto;
-	left: 25%;
-	top: 50%;
+	z-index: 2;
 }
 
 .Project3 {
@@ -431,8 +435,8 @@ aside {
 }
 
 .Project6 {
-    width: 32vw;
-    height: 40vh;
+    width: 26vw;
+    height: 32vh;
 	flex: 1 1;
 	margin: 10px;
 	background: url('bus.svg');
